# time_tracker

./: Cargo.toml  README.md
src/: categorization.rs  config.rs  data.rs  main.rs  summary.rs  visualization.rs
