[package]
name = "time_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
structopt = "0.3"
clap = "2.33"
dirs = "3.0"
csv = "1.1"
notify = "5.0"
plotters = "0.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
requestty = "0.5.0"
